# SFML-Cmake-template-

./: CMakeLists.txt  readme.md
SFML-CMake-Template/: CMakeLists.txt  SFML-CMake-Template.cpp  SFML-CMake-Template.h
